History of this buildout
========================

5.0.31 (unreleased)
-------------------

- Remove all traces of maildrop.
  [maurits]

- Add Pillow 2.7.0 egg.
  [maurits]

- Update various minor versions.
  [maurits]

- Plone 4.2.7.
  [maurits]

- Update RelStorage, psycopg2 and related packages to latest versions.
  [maurits]

- Digibib: do not get project objects.  Filter the projects based on
  the catalog metadata.  Do the same for meetings.
  [maurits]

- Meeting archive: no longer use getObject.
  [maurits]

- Add catalog metadata: getAdvisory_date, getAssigned_groups,
  getInvited_groups, getProject_number, getResponsible_group,
  project_numbers.
  [maurits]


5.0.30 (2014-10-09)
-------------------

- Fix ``UnboundLocalError: local variable 'themes' referenced before
  assignment``.  This is when exporting the subscribers of the MREvent
  contenttype, via the 'export to excel' tab.
  [maurits]


5.0.29 (2014-10-07)
-------------------

- Make sure the PFG quickedit form appears next to the toolbox,
  instead of being pushed below it.
  [maurits]


5.0.28 (2014-10-06)
-------------------

- Use correct jqueryui version for Plone 4.2.  Do not use newer
  plone.app.jquery version.
  [maurits]


5.0.27 (2014-09-17)
-------------------

- Added Products.PloneFormGen.
  [jladage]


5.0.26 (2014-07-31)
-------------------

- Use Products.PortalTransforms 2.1.4-zest20140731.  This uses
  subprocess.Popen instead of os.popen4 and should be better for
  memory.
  [maurits]


5.0.25 (2014-07-28)
-------------------

- sendmail script: send to webadmin@zestsoftware.nl too.
  [maurits]


5.0.24 (2014-07-17)
-------------------

- Change times for crontab-pack to a bit earlier on Saturday. 
  [maurits]

- Fix crontab-pack.  It needs an absolute path to the zodbpack.cfg
  file, otherwise it only works when the working directory is the
  buildout directory.
  [maurits]


5.0.23 (2014-07-08)
-------------------
